# Debt_CMake

./: CMakeLists.txt  CMakeUserPresets.json  Debt2.cpp  Services.db  Services.txt  TextColour.cpp  TextColour.h  UserServices.txt  Users.cpp  Users.h  admin.cpp  admin.h  functions.cpp  functions.h  onlineservice.cpp  onlineservice.h  program.cpp  program.h  sqlitefile.cpp  sqlitefile.h  vcpkg.json
